--- a/articles/active-directory/develop/index.yml
+++ b/articles/active-directory/develop/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.service: active-directory
   ms.subservice: develop
   ms.workload: identity
-  ms.openlocfilehash: 689fb9953f6de9c717d774e222824c5b3701527e
-  ms.sourcegitcommit: f7e160c820c1e2eb57dc480b2a8fd6bef7053e91
+  ms.openlocfilehash: e17e6195d629238c9c719d8e34780593129ae244
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/10/2020
-  ms.locfileid: "86230343"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87027064"
 landingContent:
 - title: 关于 Microsoft 标识平台
   linkLists:
@@ -76,7 +76,7 @@ landingContent:
       url: quickstart-v2-ios.md
     - text: Windows 桌面 (WPF)
       url: quickstart-v2-windows-desktop.md
-- title: 保护 Web API
+- title: Web API
   linkLists:
   - linkListType: get-started
     links:
@@ -92,11 +92,27 @@ landingContent:
       url: microsoft-graph-intro.md
     - text: Microsoft Graph 身份验证概述
       url: https://docs.microsoft.com/graph/auth/
-- title: SAML 2.0
+- title: 协议
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: OAuth 2.0 和 OpenID Connect
+      url: active-directory-v2-protocols.md
+    - text: SAML 2.0
+      url: active-directory-saml-protocol-reference.md
+- title: 企业对客户 (B2C)
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: 什么是 Azure AD B2C？
+      url: ../../active-directory-b2c/overview.md
+    - text: 技术和功能概述
+      url: ../../active-directory-b2c/technical-overview.md
+- title: 托管标识
   linkLists:
   - linkListType: get-started
     links:
-    - text: Azure AD 使用 SAML 协议的方式
-      url: active-directory-saml-protocol-reference.md
-    - text: Azure AD 中的 SAML SSO
-      url: single-sign-on-saml-protocol.md
+    - text: 关于 Azure 资源的托管标识
+      url: ../managed-identities-azure-resources/overview.md
+    - text: 托管标识和 Azure VM
+      url: ../managed-identities-azure-resources/how-managed-identities-work-vm.md
