--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -40,9 +40,11 @@
       items:
         - name: 使用 Azure 数字孪生 CLI
           href: how-to-use-cli.md
-        - name: 创建 Azure 数字孪生实例
-          href: how-to-set-up-instance.md
-        - name: 对客户端应用程序进行身份验证
+        - name: 设置实例和身份验证（已编写脚本）
+          href: how-to-set-up-instance-scripted.md
+        - name: 设置实例和身份验证（手动）
+          href: how-to-set-up-instance-manual.md
+        - name: 编写应用身份验证码
           href: how-to-authenticate-client.md
     - name: 设计模型
       items:
@@ -50,6 +52,8 @@
           href: how-to-manage-model.md
         - name: 分析和验证模型
           href: how-to-use-parser.md
+        - name: 添加标记
+          href: how-to-use-tags.md
     - name: 使用实时执行环境
       items:
         - name: 管理数字孪生
@@ -72,10 +76,16 @@
           href: how-to-manage-routes.md
         - name: 与 Azure Maps 集成
           href: how-to-integrate-maps.md
+        - name: 与 Azure 时序见解集成
+          href: how-to-integrate-time-series-insights.md
     - name: 疑难解答
       items:
         - name: 已知问题
           href: troubleshoot-known-issues.md
+        - name: 问题解决方法
+          items:
+            - name: 403（已禁止）
+              href: troubleshoot-error-403.md
 - name: 参考
   items:
     - name: 数字孪生服务限制
@@ -145,7 +155,7 @@
         - name: Azure 数字孪生示例
           href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-samples/digital-twins-samples/'
         - name: Azure 数字孪生资源管理器（示例）
-          href: 'https://github.com/Azure-Samples/digital-twins-explorer'
+          href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-explorer/digital-twins-explorer/'
         - name: DTDL 验证器（示例）
           href: 'https://docs.microsoft.com/samples/azure-samples/dtdl-validator/dtdl-validator/'
     - name: Azure 工具
