--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -67,6 +67,8 @@
       href: concepts-app-templates.md
     - name: 什么是设备模板？
       href: concepts-device-templates.md
+    - name: 消息有效负载
+      href: concepts-telemetry-properties-commands.md
     - name: 设备连接
       href: concepts-get-connected.md
     - name: 连接 IoT Edge 设备
