--- a/articles/migrate/breadcrumb/toc.yml
+++ b/articles/migrate/breadcrumb/toc.yml
@@ -12,3 +12,6 @@
     - name: 迁移
       tocHref: /sql/dma/
       topicHref: /azure/migrate/index
+    - name: AVS 迁移评估
+      tocHref: /azure/azure-vmware/
+      topicHref: /azure/migrate/index
