--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -23,7 +23,7 @@
       href: storage-sync-files-extend-servers.md
 - name: 概念
   items:
-    - name: Azure 文件
+    - name: Azure 文件存储
       items:
         - name: 规划 Azure 文件部署
           href: storage-files-planning.md
@@ -33,6 +33,8 @@
           href: storage-files-networking-overview.md
         - name: 防止意外删除数据
           href: storage-files-prevent-file-share-deletion.md
+        - name: 备份文件共享
+          href: ../../backup/azure-file-share-backup-overview.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: 静态加密
           href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: 使用客户管理的密钥进行静态加密
@@ -83,6 +85,54 @@
           href: storage-files-how-to-create-large-file-share.md
         - name: 创建高级文件共享
           href: storage-how-to-create-premium-fileshare.md
+    - name: 数据保护
+      items:
+        - name: 启用软删除
+          href: storage-files-enable-soft-delete.md
+        - name: 更改复制数据的方式
+          href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 管理数据冗余
+          items:
+            - name: 更改复制数据的方式
+              href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: 设计具有高可用性的应用程序
+              href: ../common/geo-redundant-design.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 管理灾难恢复
+          items:
+            - name: 检查“上次同步时间”属性
+              href: ../common/last-sync-time-get.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: 启动帐户故障转移
+              href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 备份文件共享
+          items:
+            - name: 门户
+              href: ../../backup/backup-afs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: CLI
+              href: ../../backup/backup-afs-cli.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: PowerShell
+              href: ../../backup/backup-azure-afs-automation.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: REST API
+              href: ../../backup/backup-azure-file-share-rest-api.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 还原文件共享
+          items:
+            - name: 门户
+              href: ../../backup/restore-afs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: CLI
+              href: ../../backup/restore-afs-cli.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: PowerShell
+              href: ../../backup/restore-afs-powershell.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: REST API
+              href: ../../backup/restore-azure-file-share-rest-api.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 管理文件共享
+          items:
+            - name: 门户
+              href: ../../backup/manage-afs-backup.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: CLI
+              href: ../../backup/manage-afs-backup-cli.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: PowerShell
+              href: ../../backup/manage-afs-powershell.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: REST API
+              href: ../../backup/manage-azure-file-share-rest-api.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: 部署
       items:
         - name: 部署 Azure 文件
@@ -125,26 +175,10 @@
           href: storage-sync-files-server-registration.md
         - name: 添加 Azure 文件同步服务器终结点
           href: storage-sync-files-server-endpoint.md
-        - name: 启用软删除
-          href: storage-files-enable-soft-delete.md
         - name: 管理 Azure 独立云中的存储
           href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: 更改复制数据的方式
-          href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: 启动帐户故障转移
           href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: 管理数据冗余
-          items:
-            - name: 更改复制数据的方式
-              href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-            - name: 设计具有高可用性的应用程序
-              href: ../common/geo-redundant-design.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: 管理灾难恢复
-          items:
-            - name: 检查“上次同步时间”属性
-              href: ../common/last-sync-time-get.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-            - name: 启动帐户故障转移
-              href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Authenticate
       items:
         - name: 启用本地 AD DS 身份验证和授权
@@ -243,9 +277,11 @@
           href: storage-sync-files-troubleshoot.md
         - name: 关于删除 Azure 文件存储的疑难解答
           href: storage-troubleshoot-cannot-delete-files-azure-file-share.md
+        - name: 备份文件共享疑难解答
+          href: ../../backup/troubleshoot-azure-files.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
 - name: 参考
   items:
-    - name: Azure 文件共享存储参考
+    - name: Azure 文件存储参考
       href: ../files/reference.md
     - name: 资源管理器模板
       displayName: arm
