--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -68,8 +68,8 @@
           href: url-route-overview.md
         - name: 重定向
           href: redirect-overview.md
-        - name: 重写 HTTP 标头
-          href: rewrite-http-headers.md
+        - name: 重写 HTTP 标头和 URL
+          href: rewrite-http-headers-url.md
     - name: SSL
       items:
         - name: SSL 终止和端到端 SSL
@@ -92,7 +92,7 @@
       href: application-gateway-web-app-overview.md
     - name: WebSocket 支持
       href: application-gateway-websocket.md
-    - name: 常见问题解答
+    - name: 常见问题
       href: application-gateway-faq.md
 - name: 操作指南
   items:
@@ -198,14 +198,20 @@
               href: redirect-internal-site-cli.md
         - name: 使用 Azure PowerShell 重定向 Web 流量
           href: tutorial-url-redirect-powershell.md
-    - name: 重写 HTTP 标头
+    - name: 重写 HTTP 标头和 URL
       items:
-        - name: Azure 门户
-          href: rewrite-http-headers-portal.md
-        - name: Azure PowerShell
-          href: add-http-header-rewrite-rule-powershell.md
-        - name: 创建和重写 HTTP 标头
-          href: tutorial-http-header-rewrite-powershell.md
+        - name: 标头重写
+          items:
+            - name: Azure 门户
+              href: rewrite-http-headers-portal.md
+            - name: Azure PowerShell
+              href: add-http-header-rewrite-rule-powershell.md
+            - name: 创建和重写 HTTP 标头
+              href: tutorial-http-header-rewrite-powershell.md
+        - name: URL 重写
+          items:
+            - name: Azure 门户
+              href: rewrite-url-portal.md
     - name: 配置应用服务 Web 应用和多租户服务
       items:
         - name: 门户
@@ -249,7 +255,7 @@
     - name: Azure CLI
       href: /cli/azure/network/application-gateway
     - name: Azure PowerShell
-      href: /powershell/azure/overview
+      href: /powershell/azure/
     - name: .NET
       href: /dotnet/api
     - name: Java
