--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -4,7 +4,7 @@
   items:
     - name: 什么是自动化？
       href: automation-intro.md
-    - name: 常见问题解答
+    - name: 常见问题
       href: automation-faq.md
 - name: 快速入门
   items:
@@ -14,6 +14,9 @@
       href: automation-quickstart-create-runbook.md
     - name: 为计算机启用 Desired State Configuration
       href: automation-quickstart-dsc-configuration.md
+    - name: 创建自动化帐户 - ARM 模板
+      displayName: Resource Manager
+      href: quickstart-create-automation-account-template.md
 - name: 教程
   items:
     - name: 创建图形 Runbook
@@ -58,7 +61,7 @@
         - name: 使用 Azure 门户创建自动化帐户
           href: automation-create-standalone-account.md
         - name: 使用资源管理器模板创建自动化帐户
-          href: automation-create-account-template.md
+          href: quickstart-create-automation-account-template.md
         - name: 使用 Amazon Web Services 配置身份验证
           href: automation-config-aws-account.md
         - name: 配置使用 Azure AD 进行的身份验证
@@ -177,6 +180,18 @@
               href: automation-dsc-extension-history.md
             - name: 排查状态配置问题
               href: troubleshoot/desired-state-configuration.md
+            - name: 方案
+              items:
+                - name: 基于 STIG 配置数据
+                  href: automation-dsc-configuration-based-on-stig.md
+                - name: 大规模配置数据
+                  href: automation-dsc-config-data-at-scale.md
+                - name: 从现有服务器创建配置
+                  href: automation-dsc-config-from-server.md
+                - name: 将配置转换为复合资源
+                  href: automation-dsc-create-composite.md
+                - name: 修正不合规的服务器
+                  href: automation-dsc-remediate.md
         - name: 更改跟踪和库存
           items:
             - name: 概述
