--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -2,19 +2,19 @@
 title: Azure Arc
 summary: Azure Arc 将 Azure 资源管理器功能扩展到 Linux 和 Windows 服务器，以及跨本地、多云和边缘的任何基础结构上的 Kubernetes 群集。 借助 Azure Arc，客户还可以在任何地方运行 Azure 数据服务，从而实现云创新的优势，包括始终提供最新数据的功能、几秒钟（而不是几小时）内完成的部署以及任何基础结构的动态可扩展性。
 metadata:
-  title: 用于服务器的 Azure Arc
+  title: Azure Arc
   description: 了解如何管理 Azure 中的本地计算机
   author: mgoedtel
   ms.service: azure-arc
   ms.topic: landing-page
   ms.date: 06/26/2020
   ms.author: magoedte
-  ms.openlocfilehash: 8493a5d90656206c5498fafbc2b0a2743cd973a7
-  ms.sourcegitcommit: 1d9f7368fa3dadedcc133e175e5a4ede003a8413
+  ms.openlocfilehash: f9d4da85185d3a8541c165b407d276af0a25ccc6
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/27/2020
-  ms.locfileid: "85482337"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87008483"
 landingContent:
 - title: Azure Arc 概述
   linkLists:
@@ -22,11 +22,11 @@ landingContent:
     links:
     - text: 了解有关 Azure Arc 的详细信息
       url: https://aka.ms/Azure-Arc-Info
-- title: 使用用于服务器的 Azure Arc 将计算机连接到 Azure
+- title: 使用已启用 Azure Arc 的服务器将计算机连接到 Azure
   linkLists:
   - linkListType: overview
     links:
-    - text: 什么是用于服务器的 Azure Arc？
+    - text: 什么是已启用 Azure Arc 的服务器？
       url: ./servers/overview.md
   - linkListType: quickstart
     links:
@@ -42,19 +42,21 @@ landingContent:
     links:
     - text: 什么是已启用 Azure Arc 的 Kubernetes？
       url: ./kubernetes/overview.md
-  - linkListType: how-to-guide
+  - linkListType: quickstart
     links:
     - text: 连接群集
       url: ./kubernetes/connect-cluster.md
-    - text: 在连接的群集中使用 GitOps
+  - linkListType: how-to-guide
+    links:
+    - text: 使用 GitOps 部署配置
       url: ./kubernetes/use-gitops-connected-cluster.md
-    - text: 将 GitOps 与 Helm 结合使用
+    - text: 使用 GitOps 部署 Helm 图表
       url: ./kubernetes/use-gitops-with-helm.md
-    - text: 对容器使用 Azure Monitor
-      url: ../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md
-    - text: 使用 Azure Policy
+    - text: 通过 Azure Policy 强制使用 GitOps
       url: ./kubernetes/use-azure-policy.md
+    - text: 用适用于容器的 Azure Monitor 进行监视
+      url: ../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md?toc=/azure/azure-arc/toc.json
+    - text: 使用 Azure Policy 的许可控制策略
+      url: ../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/toc.json
     - text: 部署 Azure IoT Edge 工作负载
       url: ./kubernetes/deploy-azure-iot-edge-workloads.md
-    - text: 加入服务主体
-      url: ./kubernetes/create-onboarding-service-principal.md
