--- a/articles/azure-arc/toc.yml
+++ b/articles/azure-arc/toc.yml
@@ -2,43 +2,45 @@
   href: index.yml
 - name: 概述
   items:
-    - name: 关于 Arc for Kubernetes
+    - name: 关于已启用 Arc 的 Kubernetes
       href: ./kubernetes/overview.md
-    - name: 关于 Azure Arc for servers
+    - name: 关于已启用 Azure Arc 的服务器
       href: ./servers/overview.md
 - name: 示例
   items:
     - name: Azure Policy 内置策略定义
       items:
-        - name: Arc for Kubernetes
+        - name: 已启用 Arc 的 Kubernetes
           href: ./kubernetes/policy-samples.md
-        - name: Arc for servers
+        - name: 已启用 Arc 的服务器
           href: ./servers/policy-samples.md
 - name: 操作指南
   items:
-    - name: Arc for Kubernetes
+    - name: 已启用 Arc 的 Kubernetes
       items:
-        - name: 群集操作
+        - name: 连接到 Azure Arc
           items:
             - name: 连接群集
               href: ./kubernetes/connect-cluster.md
-            - name: 对连接的群集使用 GitOps
+            - name: 加入服务主体
+              href: ./kubernetes/create-onboarding-service-principal.md
+        - name: 管理
+          items:
+            - name: 使用 GitOps 部署配置
               href: ./kubernetes/use-gitops-connected-cluster.md
-            - name: 将 GitOps 与 Helm 结合使用
+            - name: 使用 GitOps 部署 Helm 图表
               href: ./kubernetes/use-gitops-with-helm.md
             - name: 通过 Azure Policy 强制使用 GitOps
               href: ./kubernetes/use-azure-policy.md
             - name: 用适用于容器的 Azure Monitor 进行监视
-              href: ../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md
+              href: ../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md?toc=/azure/azure-arc/toc.json
             - name: 使用 Azure Policy 的许可控制策略
-              href: ../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/kubernetes/toc.json
+              href: ../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/toc.json
             - name: 部署 IoT 工作负载
               href: ./kubernetes/deploy-azure-iot-edge-workloads.md
-            - name: 加入服务主体
-              href: ./kubernetes/create-onboarding-service-principal.md
-            - name: 疑难解答
-              href: ./kubernetes/Troubleshooting.md
-    - name: Arc for servers
+        - name: 疑难解答
+          href: ./kubernetes/Troubleshooting.md
+    - name: 已启用 Arc 的服务器
       items:
         - name: 连接到 Azure Arc
           items:
