--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -59,13 +59,15 @@
     - name: 计划
       items:
         - name: 选择缓存层
-          href: 'cache-faq.md#what-azure-cache-for-redis-offering-and-size-should-i-use'
+          href: cache-faq.md#what-azure-cache-for-redis-offering-and-size-should-i-use
         - name: 使用群集分布缓存
           href: cache-how-to-premium-clustering.md
         - name: 使用 Redis 数据持久性保留缓存
           href: cache-how-to-premium-persistence.md
         - name: 使用虚拟网络保护缓存
           href: cache-how-to-premium-vnet.md
+        - name: 以非公开方式连接到缓存
+          href: cache-private-link.md
         - name: 设置异地复制
           href: cache-how-to-geo-replication.md
         - name: 借助预留容量节省资金
@@ -101,19 +103,19 @@
         - name: 导入/导出数据
           href: cache-how-to-import-export-data.md
         - name: 重新启动
-          href: 'cache-administration.md#reboot'
+          href: cache-administration.md#reboot
         - name: 计划更新
-          href: 'cache-administration.md#schedule-updates'
+          href: cache-administration.md#schedule-updates
         - name: 配置 redis-cli.exe 访问
           href: cache-how-to-redis-cli-tool.md
         - name: 删除 TLS 1.0 和 1.1
           href: cache-remove-tls-10-11.md
     - name: 监视
       items:
-        - name: 在 Azure 门户中监视
+        - name: 在 Azure 门户中进行监视
           href: cache-how-to-monitor.md
         - name: 设置异常警报
-          href: 'cache-how-to-monitor.md#operations-and-alerts'
+          href: cache-how-to-monitor.md#operations-and-alerts
     - name: 诊断和故障排除
       items:
         - name: 排查 Redis 服务器问题
