--- a/articles/azure-sql/toc.yml
+++ b/articles/azure-sql/toc.yml
@@ -42,8 +42,11 @@
             - name: 概述
               href: database/security-overview.md
               displayName: 'compliance, fedramp, soc, fact, fisc, hitrust, pci, iso'
-            - name: 最佳做法
+            - name: 最佳实践
               href: database/security-best-practice.md
+            - name: Azure Policy 的安全控件
+              displayName: 'regulatory, compliance, standards, domains'
+              href: ./database/security-controls-policy.md
             - name: 安全基线
               href: database/security-baseline.md
             - name: 安全属性
@@ -54,7 +57,7 @@
               href: database/threat-detection-overview.md
             - name: 数据发现和分类
               href: database/data-discovery-and-classification-overview.md
-            - name: 动态数据掩码
+            - name: 动态数据屏蔽
               href: database/dynamic-data-masking-overview.md
             - name: SQL 漏洞评估
               items:
@@ -142,7 +145,7 @@
               href: database/transparent-data-encryption-byok-configure.md
             - name: 在存储中存储漏洞扫描结果
               href: database/sql-database-vulnerability-assessment-storage.md
-            - name: Always Encrypted
+            - name: 始终加密
               items:
                 - name: 使用 Azure Key Vault
                   href: database/always-encrypted-azure-key-vault-configure.md
@@ -201,9 +204,11 @@
             - name: Java
               items:
                 - name: 使用 Spring Data JDBC
-                  href: /java/azure/spring-framework/configure-spring-data-jdbc-with-azure-sql-server?toc=/azure/sql-database/toc.json
+                  href: /azure/developer/java/spring-framework/configure-spring-data-jdbc-with-azure-sql-server?toc=/azure/azure-sql/toc.json
                 - name: 使用 Spring Data JPA
-                  href: /java/azure/spring-framework/configure-spring-data-jpa-with-azure-sql-server?toc=/azure/sql-database/toc.json
+                  href: /azure/developer/java/spring-framework/configure-spring-data-jpa-with-azure-sql-server?toc=/azure/azure-sql/toc.json
+                - name: 使用 Spring Data R2DBC
+                  href: /azure/developer/java/spring-framework/configure-spring-data-r2dbc-with-azure-sql-server?toc=/azure/azure-sql/toc.json
 - name: SQL 数据库 (SQL DB)
   items:
     - name: 文档
@@ -230,8 +235,6 @@
               href: database/service-tier-hyperscale.md
             - name: “超大规模”常见问题解答
               href: database/service-tier-hyperscale-frequently-asked-questions-faq.md
-            - name: 从高级 RS 迁移
-              href: database/service-tiers-prs.md
     - name: 快速入门
       href: database/quickstart-content-reference-guide.md
       items:
@@ -392,6 +395,12 @@
                   href: database/connect-query-go.md
                 - name: Java
                   href: database/connect-query-java.md
+                - name: 将 Java 与 Spring Data JDBC 配合使用
+                  href: /azure/developer/java/spring-framework/configure-spring-data-jdbc-with-azure-sql-server?toc=/azure/azure-sql/toc.json
+                - name: 将 Java 与 Spring Data JPA 配合使用
+                  href: /azure/developer/java/spring-framework/configure-spring-data-jpa-with-azure-sql-server?toc=/azure/azure-sql/toc.json
+                - name: 将 Java 与 Spring Data R2DBC 配合使用
+                  href: /azure/developer/java/spring-framework/configure-spring-data-r2dbc-with-azure-sql-server?toc=/azure/azure-sql/toc.json
                 - name: Node.js
                   href: database/connect-query-nodejs.md
                 - name: PHP
@@ -680,16 +689,20 @@
               href: managed-instance/replication-two-instances-and-sql-server-configure-tutorial.md
     - name: 概念
       items:
-        - name: 事务复制
-          href: managed-instance/replication-transactional-overview.md
-        - name: 管理 API 参考
-          href: managed-instance/api-references-create-manage-instance.md
         - name: 资源限制
           href: managed-instance/resource-limits.md
         - name: 连接体系结构
           href: managed-instance/connectivity-architecture-overview.md
         - name: T-SQL 的差异
           href: managed-instance/transact-sql-tsql-differences-sql-server.md
+        - name: 事务复制
+          href: managed-instance/replication-transactional-overview.md
+        - name: 管理操作
+          items:
+            - name: 概述
+              href: managed-instance/management-operations-overview.md
+            - name: API 参考
+              href: managed-instance/api-references-create-manage-instance.md
         - name: 机器学习服务
           items:
             - name: 概述
@@ -708,6 +721,8 @@
                       href: 'https://docs.microsoft.com/sql/machine-learning/tutorials/quickstart-python-functions?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current'
                     - name: 对模型进行训练和评分
                       href: 'https://docs.microsoft.com/sql/machine-learning/tutorials/quickstart-python-train-score-model?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current'
+                    - name: 部署 ONNX 模型
+                      href: /azure/azure-sql-edge/deploy-onnx?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current
                 - name: R
                   items:
                     - name: 运行 R 脚本
@@ -784,7 +799,7 @@
                       href: 'https://docs.microsoft.com/sql/machine-learning/package-management/tips-for-using-r-packages?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current'
         - name: 功能
           items:
-            - name: 链接服务器
+            - name: 链接的服务器
               href: 'https://docs.microsoft.com/sql/relational-databases/linked-servers/linked-servers-database-engine?toc=/azure/azure-sql/toc.json'
             - name: Service Broker
               href: 'https://docs.microsoft.com/sql/database-engine/configure-windows/sql-server-service-broker?toc=/azure/azure-sql/toc.json'
@@ -866,6 +881,7 @@
             - name: PowerShell
               href: virtual-machines/windows/sql-vm-create-powershell-quickstart.md
             - name: ARM 模板
+              displayName: Resource Manager
               href: virtual-machines/windows/create-sql-vm-resource-manager-template.md
         - name: 概念
           items:
@@ -952,8 +968,8 @@
                       href: virtual-machines/windows/automated-backup-sql-2014.md
                 - name: Always On 可用性组
                   items:
-                    - name: Azure SQL VM CLI
-                      href: virtual-machines/windows/availability-group-az-cli-configure.md
+                    - name: PowerShell 或 Az CLI
+                      href: virtual-machines/windows/availability-group-az-commandline-configure.md
                     - name: Azure 快速入门模板
                       href: virtual-machines/windows/availability-group-quickstart-template-configure.md
                     - name: 多个区域
@@ -995,7 +1011,7 @@
         - name: 参考
           items:
             - name: Azure PowerShell
-              href: /powershell/azure/overview
+              href: /powershell/azure/
             - name: Azure CLI
               href: /cli/azure/
             - name: T-SQL
@@ -1006,10 +1022,12 @@
               href: /rest/api/
         - name: 资源
           items:
-            - name: 常见问题解答
+            - name: 常见问题
               href: virtual-machines/windows/frequently-asked-questions-faq.md
             - name: 定价
               href: virtual-machines/windows/pricing-guidance.md
+            - name: 存档的经典 RM 文档
+              href: /previous-versions/azure/virtual-machines/windows/sqlclassic/virtual-machines-windows-classic-ps-sql-create
             - name: SQL Server Data Tools (SSDT)
               href: '/https://docs.microsoft.com/sql/ssdt/download-sql-server-data-tools-ssdt'
             - name: SQL Server Management Studio (SSMS)
@@ -1020,7 +1038,7 @@
               href: 'https://azure.microsoft.com/roadmap/?category=compute'
             - name: MSDN 论坛
               href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=WAVirtualMachinesforWindows&filter=alltypes&brandIgnore=True&sort=relevancedesc&searchTerm=SQL+Server'
-            - name: Stack Overflow
+            - name: 堆栈溢出
               href: 'https://stackoverflow.com/search?q=%5Bazure-virtual-machine%5D+sql+server'
     - name: Linux
       items:
@@ -1118,7 +1136,7 @@
       href: 'https://azure.microsoft.com/pricing/details/sql-database/'
     - name: MSDN 论坛
       href: 'https://social.msdn.microsoft.com/Forums/home?forum=ssdsgetstarted'
-    - name: Stack Overflow
+    - name: 堆栈溢出
       href: 'https://stackoverflow.com/questions/tagged/sql-azure'
     - name: 疑难解答
       items:
