--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -16,7 +16,11 @@
       href: tutorial-access-private-cloud.md
     - name: 5 - 缩放私有云
       href: tutorial-scale-private-cloud.md
-    - name: 6 - 创建内容库
+    - name: 6 - 创建 NSX-T 网络段
+      href: tutorial-nsx-t-network-segment.md
+    - name: 7 - 从本地对等连接到私有云
+      href: tutorial-expressroute-global-reach-private-cloud.md
+    - name: 8 - 通过内容库部署 VM
       href: tutorial-deploy-vm-content-library.md
 - name: 概念
   items:
@@ -34,6 +38,8 @@
       href: concepts-upgrades.md
 - name: 操作指南
   items:
+    - name: AVS 迁移评估
+      href: ../migrate/how-to-create-azure-vmware-solution-assessment.md?context=/azure/migrate/context/migrate-context.json
     - name: 设置 HCX
       href: hybrid-cloud-extension-installation.md
     - name: 管理 DHCP
