--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Landing
 title: Azure 机器学习文档
-summary: 了解如何使用 Azure 机器学习来大规模训练、部署和管理机器学习模型、AutoML 试验与管道。 教程、代码示例、API 参考和其他资源介绍了操作方法。
+summary: 了解如何使用 Azure 机器学习来大规模训练、部署和管理机器学习模型、使用 AutoML 和运行管道。  教程、代码示例、API 参考和其他资源介绍了操作方法。
 metadata:
   title: Azure 机器学习文档
-  description: 了解如何使用 Azure 机器学习来大规模训练、部署和管理机器学习模型、AutoML 试验与管道。 教程、代码示例、API 参考和其他资源介绍了操作方法。
+  description: 了解如何使用 Azure 机器学习来大规模训练、部署和管理机器学习模型、使用 AutoML 和运行管道。 教程、代码示例、API 参考和其他资源介绍了操作方法。
   services: machine-learning
   ms.service: machine-learning
   ms.subservice: core
@@ -11,13 +11,13 @@ metadata:
   ms.collection: collection
   author: j-martens
   ms.author: jmartens
-  ms.date: 04/30/2020
-  ms.openlocfilehash: 57a16ca35699f11c55e12c494a4cbb93bac8a334
-  ms.sourcegitcommit: bb0afd0df5563cc53f76a642fd8fc709e366568b
+  ms.date: 07/30/2020
+  ms.openlocfilehash: 1006874272fa4798d9e56cbc76d7b039e697c413
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/19/2020
-  ms.locfileid: "83592995"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87047788"
 landingContent:
 - title: 机器学习入门
   linkLists:
@@ -31,14 +31,14 @@ landingContent:
       url: tutorial-first-experiment-automated-ml.md
     - text: RStudio
       url: tutorial-1st-r-experiment.md
-- title: 使用工作室 Web 体验
+- title: 在工作室中使用设计器和 AutoML
   linkLists:
   - linkListType: overview
     links:
+    - text: 什么是自动化机器学习 (AutoML)？
+      url: concept-automated-ml.md
     - text: 什么是设计器（拖放式）？
       url: concept-designer.md
-    - text: 什么是自动化机器学习？
-      url: concept-automated-ml.md
     - text: 如何选择算法
       url: how-to-select-algorithms.md
   - linkListType: tutorial
@@ -51,7 +51,7 @@ landingContent:
       url: tutorial-designer-automobile-price-train-score.md
     - text: 创建图像标记项目
       url: tutorial-labeling.md
-- title: 使用 Python SDK
+- title: 使用 Python SDK 进行训练
   linkLists:
   - linkListType: tutorial
     links:
@@ -71,19 +71,19 @@ landingContent:
       url: how-to-machine-learning-interpretability.md
     - text: 深度学习与 ML
       url: concept-deep-learning-vs-machine-learning.md
-    - text: 使用 Scikit-learn 进行训练
+    - text: 训练和注册 Scikit-learn 模型
       url: how-to-train-scikit-learn.md
-    - text: 使用 TensorFlow 进行训练
+    - text: 训练和注册 TensorFlow 模型
       url: how-to-train-tensorflow.md
-    - text: 使用 PyTorch 进行训练
+    - text: 训练和注册 PyTorch 模型
       url: how-to-train-pytorch.md
-    - text: 使用 Keras 进行训练
+    - text: 训练和注册 Keras 模型
       url: how-to-train-keras.md
     - text: 强化学习
       url: how-to-use-reinforcement-learning.md
     - text: 什么是 ML 管道？
       url: concept-ml-pipelines.md
-- title: 部署和管理模型 (MLOps)
+- title: MLOps：部署和管理模型
   linkLists:
   - linkListType: how-to-guide
     links:
