--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -103,7 +103,7 @@
           href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Python
           href: ../common/storage-samples-python.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: JavaScript
+        - name: Javascript
           href: ../common/storage-samples-javascript.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 其他语言
           href: ../common/storage-samples.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
@@ -248,7 +248,7 @@
                       href: ../common/storage-import-export-tool-repairing-an-import-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: 修复导出作业
                       href: ../common/storage-import-export-tool-repairing-an-export-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 常见问题解答
+                - name: 常见问题
                   href: ../common/storage-import-export-service-faq.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: REST API
                   href: /rest/api/storageimportexport/jobs
@@ -280,6 +280,8 @@
           href: storage-blob-pageblob-overview.md
         - name: 静态网站
           href: storage-blob-static-website.md
+        - name: NFS 3.0 协议支持
+          href: network-file-system-protocol-support.md
     - name: 如何
       items:
         - name: 创建和管理存储帐户
@@ -469,12 +471,12 @@
                   href: ../common/storage-use-azcopy-configure.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Azure 数据工厂
               href: ../../data-factory/connector-azure-blob-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 将 Blob 存储装载为 Linux 上的文件系统
+            - name: 使用 NFS 从 Linux 装载存储
+              href: network-file-system-protocol-support-how-to.md
+            - name: 使用 blobfuse 从 Linux 装载存储
               href: storage-how-to-mount-container-linux.md
             - name: 通过数据移动库传输数据
               href: ../common/storage-use-data-movement-library.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 存储迁移常见问题解答
-              href: ../common/storage-migration-faq.md
         - name: 使用 Blob 进行开发
           items:
             - name: C++
@@ -662,6 +664,9 @@
               href: security-recommendations.md
             - name: 访问控制（目录和文件）
               href: data-lake-storage-access-control.md
+            - name: Azure Policy 的安全控件
+              displayName: 'regulatory, compliance, standards, domains'
+              href: ./security-controls-policy.md
         - name: 兼容性
           items:
             - name: 多协议访问
