--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -5,7 +5,6 @@
     - name: 什么是虚拟机规模集？
       href: overview.md
 - name: 快速入门
-  expanded: true
   items:
     - name: 在 Azure 门户中创建
       href: quick-create-portal.md
@@ -21,6 +20,7 @@
         - name: Windows 规模集
           displayName: 'ARM, resource manager'
           href: quick-create-template-windows.md
+  expanded: true
 - name: 教程
   items:
     - name: 1 - 创建/管理规模集
@@ -102,65 +102,71 @@
       href: ../azure-resource-manager/management/overview.md
       maintainContext: true
     - name: 区域
-      href: ../virtual-machines/windows/regions.md
+      href: ../virtual-machines/regions.md
     - name: 可用性和性能
-      maintainContext: true
       items:
         - name: 可用性
-          href: availability.md
+          href: ../virtual-machines/availability.md?toc=%2fazure%2fvirtual-machine-scale-sets%2ftoc.json
         - name: 归置
           href: co-location.md
         - name: 网络性能
           href: ../virtual-network/virtual-network-optimize-network-bandwidth.md?toc=%2fazure%2fvirtual-machine-scale-sets%2fwindows%2ftoc.json
         - name: 管理规模集中的容错域
           href: virtual-machine-scale-sets-manage-fault-domains.md
+      maintainContext: true
     - name: 映像
       href: shared-image-galleries.md
     - name: VM 类型和大小
       href: ../virtual-machines/windows/sizes.md
-      maintainContext: true
       items:
         - name: 常规用途
-          href: ../virtual-machines/windows/sizes-general.md
+          href: ../virtual-machines/sizes-general.md
           maintainContext: true
           items:
             - name: B 系列可突增
-              href: ../virtual-machines/windows/b-series-burstable.md
+              href: ../virtual-machines/sizes-b-series-burstable.md
               maintainContext: true
         - name: 计算优化
-          href: ../virtual-machines/windows/sizes-compute.md
+          href: ../virtual-machines/sizes-compute.md
           maintainContext: true
         - name: 内存优化
-          href: ../virtual-machines/windows/sizes-memory.md
+          href: ../virtual-machines/sizes-memory.md
           maintainContext: true
           items:
             - name: 约束的 vCPU
               href: ../virtual-machines/windows/constrained-vcpu.md
               maintainContext: true
         - name: 存储优化
-          href: ../virtual-machines/windows/sizes-storage.md
+          href: ../virtual-machines/sizes-storage.md
           maintainContext: true
         - name: GPU 优化
-          href: ../virtual-machines/windows/sizes-gpu.md
+          href: ../virtual-machines/sizes-gpu.md
           maintainContext: true
           items:
             - name: 安装 NVIDIA GPU 驱动程序
               href: ../virtual-machines/windows/n-series-driver-setup.md
               maintainContext: true
         - name: 高性能计算
-          href: ../virtual-machines/windows/sizes-hpc.md
+          href: ../virtual-machines/sizes-hpc.md
+          maintainContext: true
+        - name: 不带临时磁盘的 Azure VM
+          href: ../virtual-machines/azure-vms-no-temp-disk.md
+          maintainContext: true
+        - name: Azure VM 大小命名约定
+          href: ../virtual-machines/vm-naming-conventions.md
           maintainContext: true
         - name: Azure 计算单元 (ACU)
-          href: ../virtual-machines/windows/acu.md
+          href: ../virtual-machines/acu.md
           maintainContext: true
         - name: 基准评分
           href: ../virtual-machines/windows/compute-benchmark-scores.md
           maintainContext: true
+      maintainContext: true
     - name: 认可的 Linux 发行版
       href: ../virtual-machines/linux/endorsed-distros.md
       maintainContext: true
     - name: 维护和更新
-      href: ../virtual-machines/windows/maintenance-and-updates.md
+      href: ../virtual-machines/maintenance-and-updates.md?bc=/azure/virtual-machines/windows/breadcrumb/toc.json&toc=/azure/virtual-machines/windows/toc.json
       maintainContext: true
     - name: 业务流程模式
       href: orchestration-modes.md
@@ -172,7 +178,7 @@
         - name: 选择磁盘类型
           href: ../virtual-machines/windows/disks-types.md
           maintainContext: true
-        - name: 加密
+        - name: Encryption
           href: ../virtual-machines/windows/disk-encryption.md?toc=%2fazure%2fvirtual-machine-scale-sets%2ftoc.json
           maintainContext: true
         - name: 高级存储性能
@@ -198,11 +204,13 @@
           href: ../virtual-machines/windows/security-policy.md
         - name: Azure 磁盘加密
           href: disk-encryption-overview.md
+        - name: Azure 安全基线
+          href: security-baseline.md
         - name: 内置安全控件
           href: virtual-machine-scale-sets-security-controls.md
       maintainContext: true
     - name: 监视
-      href: ../virtual-machines/windows/monitor.md
+      href: ../azure-monitor/insights/monitor-vm-azure.md
       maintainContext: true
     - name: 部署注意事项
       items:
@@ -211,7 +219,7 @@
           maintainContext: true
     - name: 规模集常见问题解答
       href: virtual-machine-scale-sets-faq.md
-- name: 操作方式
+- name: 如何
   items:
     - name: 规划和设计
       items:
@@ -381,9 +389,7 @@
 - name: 参考
   items:
     - name: Azure PowerShell
-      href: /powershell/azure/overview
-    - name: Azure CLI
-      href: ../virtual-machines/azure-cli-arm-commands.md
+      href: /powershell/azure/
     - name: REST
       href: /rest/api/virtualmachinescalesets/
     - name: Azure 模板
