--- a/articles/virtual-machines/extensions/toc.yml
+++ b/articles/virtual-machines/extensions/toc.yml
@@ -12,7 +12,7 @@
   expanded: true
   items:
     - name: 使用自定义脚本扩展
-      href: /azure/virtual-machines/windows/tutorial-automate-vm-deployment
+      href: ../windows/tutorial-automate-vm-deployment.md
       maintainContext: true
 - name: 概念
   items:
@@ -58,6 +58,12 @@
           href: network-watcher-linux.md
         - name: Windows
           href: network-watcher-windows.md
+    - name: InfiniBand 驱动程序
+      items:
+        - name: Linux
+          href: hpc-compute-infiniband-linux.md
+        - name: Windows
+          href: hpc-compute-infiniband-windows.md
     - name: NVIDIA GPU 驱动程序
       items:
         - name: Linux
