--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -38,6 +38,8 @@
           href: virtual-wan-configure-automation-providers.md
     - name: 定价概念
       href: pricing-concepts.md
+    - name: 关于虚拟中心中的 NVA
+      href: about-nva-hub.md
     - name: 路由
       items:
         - name: 关于虚拟中心路由
@@ -60,6 +62,10 @@
               href: scenario-route-between-hubs-firewall.md
             - name: Azure 防火墙 - 自定义
               href: scenario-route-between-vnets-firewall.md
+    - name: 监视
+      items:
+        - name: 关于虚拟 WAN 的 Azure Monitor 见解（预览版）
+          href: azure-monitor-insights.md
     - name: 站点到站点
       items:
         - name: 关于 IPsec 策略
@@ -70,6 +76,8 @@
   items:
     - name: 升级虚拟 WAN SKU
       href: upgrade-virtual-wan.md
+    - name: 在虚拟中心中创建 NVA（预览版）
+      href: How-to-nva-hub.md
     - name: ExpressRoute
       items:
         - name: 创建 ExpressRoute 连接
